# cloud-custodian

./: .azure-pipelines.yml  .dockerignore  .drone.yml  .gitignore  .travis.yml  CODEOWNERS  Dockerfile  Makefile  OWNERS.md  README.md  README.rst  cloudbuild.yaml  pyproject.toml  ratchet.txt  rds.yml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.py  test.env  todo.md  tox.ini
tools/c7n_azure/: pyproject.toml  requirements.txt  setup.py  setup.py.tmpl
tools/c7n_azure/c7n_azure/: __init__.py  azure_events.py  constants.py  dependency_manager.py  entry.py  filters.py  function.py  function_package.py  functionapp_utils.py  handler.py  mu.py  output.py  policy.py  provider.py  query.py  session.py  storage_utils.py  tags.py  utils.py
tools/c7n_azure/c7n_azure/actions/: base.py  delete.py  firewall.py  lock.py  logic_app.py  notify.py  tagging.py
tools/c7n_azure/c7n_azure/container_host/: __init__.py  host.py  modes.py
tools/c7n_azure/c7n_azure/provisioning/: __init__.py  autoscale.py  function_app.py
tools/c7n_azure/c7n_azure/resources/: __init__.py  access_control.py  aci.py  apimanagement.py  appserviceplan.py  arm.py  batch.py  cdn.py  cognitive_service.py  container_registry.py  container_service.py  cosmos_db.py  cost_management_export.py  data_factory.py  databricks.py  datalake_store.py  disk.py  dns_zone.py  event_hub.py  event_subscription.py  generic_arm_resource.py  hdinsight.py  image.py  iot_hub.py  k8s_service.py  key_vault.py  load_balancer.py  msi.py  network_interface.py  network_security_group.py  policy_assignments.py  postgresql_database.py  postgresql_server.py  public_ip.py  record_set.py  redis.py  resource_map.py  resourcegroup.py  route_table.py  search.py  (+8 more)
tools/c7n_azure/tests/: azure_common.py  test_policy.py
tools/c7n_azure/tests/cassettes/: SqlServerTest.test_metric_elastic_include.yaml
tools/c7n_azure/tests_azure/: azure_common.py  test_actions_autotag-base.py  test_actions_autotag-date.py  test_actions_autotag-user.py  test_actions_mark-for-op.py  test_actions_tag-trim.py  test_actions_tag.py  test_actions_untag.py  test_azure_events.py  test_azure_query.py  test_azure_utils.py  test_base_action.py  test_dependency_manager.py  test_deployment_units.py  test_diagnostic_settings.py  test_filter_policycompliance.py  test_filter_resource_lock.py  test_filters_cost.py  test_filters_marked_for_op.py  test_filters_parent.py  test_filters_tag.py  test_firewall_actions.py  test_firewall_bypass_filter.py  test_firewall_rules_filter.py  test_function.py  test_function_package.py  test_functional_actions_tags.py  test_functional_filters_cost.py  test_functional_filters_parent.py  test_functional_filters_tags.py  test_functionapp_utils.py  test_logic_app.py  test_notify.py  test_output.py  test_policy_mode.py  test_resource_graph_source.py  test_resource_id.py  test_session.py  test_storage_firewall_actions.py  test_storageutils.py  (+4 more)
tools/c7n_azure/tests_azure/tests_resources/: test_access_control.py  test_aci.py  test_aks.py  test_apimanagement.py  test_app_service_plan.py  test_armresource.py  test_batch.py  test_cdn.py  test_cognitive_service.py  test_container_host.py  test_container_registry.py  test_container_service.py  test_cosmos_db.py  test_cost_management_export.py  test_data_factory.py  test_databricks.py  test_datalake.py  test_disk.py  test_dnszone.py  test_event_hub.py  test_event_subscriptions.py  test_hdinsight.py  test_iot_hub.py  test_keyvault.py  test_keyvault_certificate.py  test_keyvault_keys.py  test_keyvault_storage.py  test_load_balancer.py  test_network_interface.py  test_networksecuritygroup.py  test_policyassignment.py  test_postgresql_database.py  test_postgresql_server.py  test_public_ip.py  test_record_set.py  test_redis.py  test_resourcegroup.py  test_route_table.py  test_search.py  test_sqldatabase.py  (+7 more)
tools/c7n_gcp/: pyproject.toml  requirements.txt  setup.py
tools/c7n_gcp/c7n_gcp/: __init__.py  client.py  entry.py  handler.py  mu.py  output.py  policy.py  provider.py  query.py
tools/c7n_gcp/c7n_gcp/actions/: __init__.py  core.py  cscc.py  iampolicy.py  labels.py  notify.py
tools/c7n_gcp/c7n_gcp/filters/: __init__.py  iam.py  labels.py  method.py
tools/c7n_gcp/c7n_gcp/resources/: appengine.py  bigquery.py  build.py  cloudbilling.py  compute.py  dataflow.py  deploymentmanager.py  dns.py  function.py  gke.py  iam.py  kms.py  loadbalancer.py  logging.py  mlengine.py  network.py  pubsub.py  resourcemanager.py  service.py  source.py  spanner.py  sql.py  storage.py
tools/c7n_gcp/tests/: gcp_common.py  recorder.py  test_appengine.py  test_bigquery.py  test_cloudbilling.py  test_cloudfunction.py  test_compute.py  test_cscc.py  test_dataflow.py  test_deploymentmanager.py  test_dns.py  test_gcp_iam.py  test_gcp_labels.py  test_gcp_storage.py  test_gke.py  test_inventory.py  test_kms.py  test_loadbalancer.py  test_logging.py  test_mlengine.py  test_mu_gcp.py  test_network.py  test_notify_gcp.py  test_output_gcp.py  test_pubsub.py  test_query.py  test_report.py  test_resource.py  test_resourcemanager.py  test_service.py  test_spanner.py  test_sql.py
tools/c7n_kube/: deploy.py  pyproject.toml  requirements.txt  setup.py
tools/c7n_kube/c7n_kube/: admctrl.py  entry.py  filters.py  provider.py  query.py
tools/c7n_kube/c7n_kube/actions/: core.py  labels.py  shared.py
tools/c7n_kube/c7n_kube/resources/: configmap.py  crd.py  daemonset.py  node.py  pod.py  (+4 more)
tools/c7n_kube/tests/: common_kube.py  test_actions.py  test_custom_resource.py  test_labels.py  test_namespace.py
tools/c7n_logexporter/: cfn.yml  pyproject.toml  requirements.txt  setup.py
tools/c7n_logexporter/c7n_logexporter/: __init__.py  exporter.py  flowdeliver.py  stream.py
tools/c7n_org/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
tools/c7n_org/c7n_org/: cli.py
tools/c7n_org/scripts/: azuresubs.py  gcpprojects.py  orgaccounts.py
tools/c7n_org/tests/: test_org.py
tools/c7n_trailcreator/: pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_trailcreator/c7n_trailcreator/: trailcreator.py
(+624 files in other folders)
