[tool.poetry]
name = "c7n"
version = "0.9.0"
description = "Cloud Custodian - Policy Rules Engine"
authors = ["Cloud Custodian Project <https://github.com/cloud-custodian/cloud-custodian>"]
readme = "README.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
license = "Apache-2.0"
packages = [
    { include = "c7n" }]
classifiers=[
        'Topic :: System :: Systems Administration',
        'Topic :: System :: Distributed Computing']

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cloud-custodian/cloud-custodian/issues"

[tool.poetry.scripts]
custodian = 'c7n.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.11.12"
jsonschema = "^3.2.0"
argcomplete = "^1.11.1"
python-dateutil = "^2.8.1"
pyyaml = "^5.3"
tabulate = "^0.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = "^5.0.3"
placebo = "^0.9.0"
pytest-xdist = "^1.31.0"
pytest-cov = "^2.8.1"
mock = "^4.0.1"
vcrpy = "^4.0.2"
aws-xray-sdk = "^2.4.3"
importlib_metadata = "^1.4.0;python_version<3.8"
flake8 = "^3.7.9"

