[tool.poetry]
name = "c7n_kube"
version = "0.1.1"
description = "Cloud Custodian - Kubernetes Provider"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
custodian = {path = "../..", develop = true}
kubernetes = "^10.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
vcrpy = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
