[tool.poetry]
name = "c7n_org"
version = "0.5.7"
description = "Cloud Custodian - Parallel Execution"
readme = "README.md"
authors = ["Cloud Custodian Project <https://github.com/cloud-custodian/cloud-custodian>"]
license = "Apache-2.0"
classifiers=[
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.6"
c7n = {path = "../..", develop = true, version="^0.9"}

click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
